<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Booze Gauge</string>
    <string name="action_settings">Settings</string>
    <string name="disclaimer">THIS IS NOT A LEGAL SOBRIETY TEST.</string>
    <string name="title_activity_alpha_test">Alphabet</string>
    <string name="full">Full Test</string>
    <string name="alpha">Alphabet Test</string>
    <string name="bal">Balance Test</string>
    <string name="space">Spatial Reasoning</string>
    <string name="mem">Memory Test</string>
    <string name="cont">continue</string>
    <string name="title_activity_bal_test">Balance</string>
    <string name="title_activity_space_test">Spatial Reasoning</string>
    <string name="title_activity_mem_test">Memory</string>
    <string name="title_activity_result_screen">Results</string>
    <string name="result">Results</string>
    <string name="balance_instructions">Hold the device as flat and still as possible.</string>
    <string name="score_label_str">Score: </string>
    <string name="space_instructions">Drag the red box to the area marked \'F\'</string>
    <string name="title_activity_super">SuperActivity</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="alpha2">Alphabet Test - Tap the alphabet in reverse!</string>
    <string name="start">Start</string>
    <string name="alpha_instructions">Starting at Z, tap each letter of the alphabet in reverse.</string>

</resources>