<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartScreen" >

    <TextView
        android:id="@+id/disclaimerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/disclaimer" />

    <Button
        android:id="@+id/fullButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/disclaimerView"
        android:layout_marginTop="25dp"
        android:onClick="playFull"
        android:text="@string/full" />

    <LinearLayout
        android:id="@+id/buttonRow1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fullButton"
        android:layout_marginTop="25dp" >

        <Button
            android:id="@+id/alphaButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:onClick="playAlpha"
            android:text="@string/alpha" />

        <Button
            android:id="@+id/balanceButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:onClick="playBal"
            android:text="@string/bal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonRow2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonRow1">

        <Button
            android:id="@+id/logicButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:onClick="playLog"
            android:text="@string/space" />

        <Button
            android:id="@+id/memoryButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:onClick="playMem"
            android:text="@string/mem" />
    </LinearLayout>

</RelativeLayout>